<resources>
    <string name="app_name">1名片</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="information_name">姓名</string>
    <string name="information_birthday">生日</string>
    <string name="information_age">年龄</string>
    <string name="information_gender">性别</string>
    <string name="information_school_studentnumber">学号</string>
    <string name="information_school_major">专业</string>
    <string name="information_male">男</string>
    <string name="information_female">女</string>
    <string name="information_phone">电话</string>
    <string name="information_email">邮件</string>
    <string name="information_contentDescription">QR</string>
    <string name="create_QR">Create QRcode</string>

</resources>
