<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/my_ming_pian_1"
    tools:context=".MyMingPian">


    <ImageButton
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:scaleType="fitXY"
        android:id="@+id/QR"
        android:src="@drawable/qr"
        android:padding="2dp"
        tools:ignore="ContentDescription"        />
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/information_name"
        android:textSize="30dp"
        android:textColor="#88bbFFEE"
        android:inputType="text"
        android:layout_toRightOf="@+id/QR"        />
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/QR">
        <!--<RadioButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/information_female"-->
        <!--android:textColor="#62eebb88"-->
        <!--android:id="@+id/famale"/>-->
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_male"
        android:textColor="#F2eebb88"
        android:id="@+id/male"
        android:checked="true"/>
    </RadioGroup>
    <EditText
        android:id="@+id/studentnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/information_school_studentnumber"
        android:inputType="text"
        android:textColor="#F2eebb88"
        android:layout_below="@+id/gender"
        android:layout_toRightOf="@+id/QR"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/information_phone"
        android:inputType="text"
        android:textColor="#88aaFFFF"
        android:layout_below="@+id/studentnumber"
        android:layout_toRightOf="@+id/QR"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/information_email"
        android:inputType="text"
        android:textColor="#d8aa44FF"
        android:layout_below="@+id/phone"
        android:layout_toRightOf="@+id/QR"/>
</RelativeLayout>
